# ZeroAlign-Rec

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  README.ko.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.codex/: hooks.json
.githooks/: post-checkout  post-commit  pre-commit  pre-push
.github/: copilot-instructions.md  pull_request_template.md
.harness/: README.md
docs/: README.md
graphify-out/: .graphify_chunk_01.json  BUILD_INFO.json  GRAPH_REPORT.md  VERIFY_FULL_REFRESH.json  cost.json  graph.html  graph.json  manifest.json
ideas/: README.md
phases/: README.md
raw/: README.md
references/: README.md  local-adaptation.md
scripts/: execute.py  graphify_ci_candidate.sh  graphify_code_refresh.sh  graphify_eval.py  graphify_full_refresh.py  graphify_prepare_corpus.sh  graphify_semantic_adapter.py  graphify_sync_staged.sh  graphify_verify_full_refresh.py
tasks/: README.md  plan.md  todo.md
tests/: test_cli_build_neighbor_context.py  test_cli_build_taxonomy_dictionary.py  test_cli_build_taxonomy_step1.py  test_cli_compile_sid_index.py  test_cli_prepare_foodcom.py  test_cli_recommend.py  test_cli_smoke_mlx.py  test_cli_structure_taxonomy_items.py  test_confidence_mapping.py  test_config.py  test_embedding.py  test_execute_script.py  test_foodcom_dataset.py  test_git_hook_scripts.py  test_graphify_auto_refresh.py  test_graphify_eval_explanations.py  test_graphify_eval_graph_quality.py  test_graphify_eval_scorecard.py  test_graphify_harness.py  test_graphify_producer.py  test_graphify_workflow.py  test_hook_runtime_layout.py  (+15 more)
(+175 files in other folders)
